force-app/main/default/objects/ClientRelationship__c/ClientRelationship__c.object-meta.xml
<CustomObject>
    <label>Client Relationship</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>