force-app/main/default/objects/ClientRelationship__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Law Firm / Independent Directors, Member Firm, Chambers, Investors / Private Equity Firms</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Relationships (Entity)</relationshipLabel>
    <relationshipName>Client_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>