force-app/main/default/objects/ClientRelationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Law Firm / Independent Directors</fullName>
            </value>
            <value>
                <fullName>Chambers</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Investors / Private Equity Firms</fullName>
            </value>
            <value>
                <fullName>Member Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>