force-app/main/default/objects/ClientRelationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Client__c</columns>
    <columns>Entity__c</columns>
    <columns>Relationship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>